<resources>
    <string name="app_name">Pointeuse</string>
    <string name="tvLast_default">Pas de pointage en cours</string>
    <string name="tvLast_en_cour">Dernier pointage en cours:</string>
    <string name="btn_add_point">Démarrer</string>
    <string name="btn_end_point">Arrêter</string>
    <string name="edt_info_hint">Info (facultatif, seulement en entrée)</string>
    <string name="mi_histo_txt">Historique</string>
    <string name="tv_title_histo">Historique des pointages</string>
    <string name="edt_date1_hint_txt">Selectionner la date</string>
    <string name="edt_date2_hint_txt">Selectionner la date</string>
    <string name="tv_title_d1">Date de départ:</string>
    <string name="tv_title_d2">Date de fin:</string>
    <string name="tv_title_update_point">Ajouter ou modifier un pointage</string>
    <string name="mi_ajout_txt">Ajouter un pointage</string>
</resources>